fixed the crash in RankingServiceTest and cleaned up some code